Fix: 레이아웃에 z-index를 설정해서 nav 영역 보존

--- a/src/assets/styles/variables/_z-index.scss
+++ b/src/assets/styles/variables/_z-index.scss
@@ -2,5 +2,6 @@
 $modal: 99;
 $modal-background: 98;
 
-$test1: 100;
-$nav:1;
+//layout
+$nav: 1;
+$main: 0;
